--- a/LesDelicesDeTata.csproj
+++ b/LesDelicesDeTata.csproj
@@ -8,11 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="View\" />
+      <PackageReference Include="MySql.Data" Version="8.3.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MySql.Data" Version="8.3.0" />
+      <Page Update="View\ajouterProduit.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="View\EditProduit.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
     </ItemGroup>
 
 </Project>
